--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "server-build": "prisma migrate deploy && prisma generate && next build"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.33.3",
+    "@clerk/themes": "^2.4.25",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
