--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "next build",
     "start": "next start",
     "server-build": "prisma migrate deploy && prisma generate && next build",
+    "postbuild": "tsx lib/scripts/update-version.ts",
+    "update-version": "tsx lib/scripts/update-version.ts",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -64,6 +66,7 @@
     "msw": "^2.11.5",
     "prisma": "^6.17.1",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "vitest": "^3.2.4"
