fix(branch): error handling, prisma init issue in prod

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "server-build": "prisma migrate deploy && prisma generate && next build",
+    "postinstall": "prisma generate",
     "postbuild": "tsx lib/scripts/update-version.ts",
     "update-version": "tsx lib/scripts/update-version.ts",
     "test": "vitest",
