--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@clerk/nextjs": "^6.33.3",
     "@clerk/themes": "^2.4.25",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@prisma/client": "^6.17.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
