fix: adjust Node version requirements for production compatibility

--- a/.npmrc
+++ b/.npmrc
@@ -7,5 +7,5 @@ save-exact=true
 # Prevent npm from modifying package-lock.json during install
 package-lock=true
 
-# Engine strict to enforce Node/npm versions
-engine-strict=true
+# Engine strict to enforce Node/npm versions (disabled for production compatibility)
+# engine-strict=true
