--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": ">=20.0.0",
+    "node": ">=20.11.0",
     "npm": ">=10.0.0"
   },
   "scripts": {
@@ -68,7 +68,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "4.3.4",
     "@vitest/coverage-v8": "^3.2.4",
     "happy-dom": "^20.0.5",
     "msw": "^2.11.5",
