--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "react-dom": "19.1.0",
     "recharts": "^2.15.4",
     "sharp": "^0.34.4",
+    "socket.io": "4.8.1",
+    "socket.io-client": "4.8.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "usehooks-ts": "^3.1.1",
